seed subjects, new subject model, upd swagger, subject repo/service updates
